[workspace]
members = [
    "fs-lib",
    "fs-luajit-decompile",
    "fs-luau-compile",
    "fs-luau-decompile",
    "fs-patch",
    "fs-patch-process",
    "fs-shapes-unlock",
    "fs-unpack",
    "fs-xml-format"
]
exclude = ["medal"]

resolver = "3"

[profile.release]
strip = true
codegen-units = 1
panic = "abort"
#opt-level = "z"