[package]
name = "fs-luau-decompile"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
argh = "0.1.13"
fs-lib = { version = "1.0.0", path = "../fs-lib" }
lazy_static = "1.5.0"
nom = "7.1.3"
nom-leb128 = "0.2.0"
regex = "1.11.1"
rayon = "1.11.0"
luau-lifter = { path = "../medal/luau-lifter" }